Fixed ActiveFilters UI on narrow screens

--- a/src/components/ActiveFilters/ActiveFilters.scss
+++ b/src/components/ActiveFilters/ActiveFilters.scss
@@ -1,13 +1,18 @@
 @import "main";
 
 .ActiveFilters {
-  display: grid;
-  width: fit-content;
-  grid-auto-flow: column;
-  grid-gap: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  max-width: 100vw;
+  overflow: hidden;
 
   & .activeFilterChip {
     border-color: white;
+    margin-right: 1rem;
+    margin-bottom: 0.5rem;
     & * {
       color: white;
     }
